--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 *.mdl -crlf -diff -merge
 *.mat -crlf -diff -merge
 *.mlx -crlf -diff -merge
+
+.gitignore export-ignore
+.gitattributes export-ignore
