--- a/.gitattributes
+++ b/.gitattributes
@@ -5,8 +5,6 @@
 
 .gitignore export-ignore
 .gitattributes export-ignore
-/+DLS_Simscape export-ignore
-initlib.m export-ignore
-/dev export-ignore
+/Components export-ignore
 /resources export-ignore
-dls-simulink.prj export ignore
+dls-simulink.prj export-ignore
